[package]
name = "embassy-net-examples"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[features]
std = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
defmt = { version = "0.1.3", optional = true }
log = { version = "0.4.11", optional = true }
heapless            = { version = "0.5.6", default-features = false }
embassy             = { version = "0.1.0", features=["std", "log"] }
embassy-std         = { version = "0.1.0" }
embassy-net         = { version = "0.1.0", path = "../embassy-net", features=["std", "log"] }
futures             = { version = "0.3.5", default-features = false, features = [ "async-await" ]}
env_logger = "0.8.2"
libc = "0.2.81"
async-io = "1.3.1"

[dependencies.smoltcp]
version = "0.6.0"
# git = "https://github.com/akiles/smoltcp"
# rev = "00952e2c5cdf5667a1dfb6142258055f58d3851c"
default-features = false
features = [
  "medium-ethernet",
  "medium-ip",
  "proto-ipv4",
  "proto-dhcpv4",
  #"proto-igmp",
  #"proto-ipv6",
  #"socket-raw",
  #"socket-icmp",
  #"socket-udp",
  "socket-tcp",
  "async",
]
